remove spaces and commentaries

--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
 <body>
     <div id="container">
         <div id="cat">
-            <img src="img/cat.gif" alt="cat"> <!--Imagem do personagem do usuario-->
+            <img src="img/cat.gif" alt="cat"> 
         </div>
         <div id="block">
-            <img src="img/cat_enemy.gif" alt="blocks"> <!--Imagem do inimigo-->
+            <img src="img/cat_enemy.gif" alt="blocks"> 
         </div>
         <div id="road">
-            <img src="img/road.png" alt="road"> <!--Imagem do chão-->
-        </div>
+            <img src="img/road.png" alt="road"> 
         <div id="cloud">
-            <img src="img/cloud.png" alt="cloud"> <!--Imagem da nuvem-->
+            <img src="img/cloud.png" alt="cloud"> 
         </div>
-        <div id="score">Score <b>00</b></div> <!--Div Score-->
-        <div id="gameOver">Game Over</div> <!--Div Game Over-->
+        <div id="score">Score <b>00</b></div> 
+        <div id="gameOver">Game Over</div> 
     </div>
     <script src="js/file.js"></script>
 </body>
