fix missing tag on index.html

--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 <body>
     <div id="container">
         <div id="cat">
-            <img src="img/cat.gif" alt="cat"> 
+            <img src="img/cat.gif" alt="cat">
         </div>
         <div id="block">
-            <img src="img/cat_enemy.gif" alt="blocks"> 
+            <img src="img/cat_enemy.gif" alt="blocks">
         </div>
         <div id="road">
-            <img src="img/road.png" alt="road"> 
-        <div id="cloud">
-            <img src="img/cloud.png" alt="cloud"> 
+            <img src="img/road.png" alt="road">
         </div>
-        <div id="score">Score <b>00</b></div> 
-        <div id="gameOver">Game Over</div> 
+        <div id="cloud">
+            <img src="img/cloud.png" alt="cloud">
+        </div>
+        <div id="score">Score <strong>00</strong></div>
+        <div id="gameOver">Game Over</div>
     </div>
     <script src="js/file.js"></script>
 </body>
